# okiosk

./: .gitignore  .gitmodules  AI_MODULE.md  BACKEND_MIGRATION_SUMMARY.md  CART_AI_IMPLEMENTATION_SUMMARY.md  CART_CATEGORY_QUICK_REFERENCE.md  CATEGORY_MODULE.md  CHECKOUT_IMPLEMENTATION_GUIDE.md  CHECKOUT_IMPLEMENTATION_SUMMARY.md  Dockerfile  Flow.md  IMAGE_CACHE_IMPLEMENTATION_GUIDE.md  KIOSK_CART_IMPLEMENTATION.md  KIOSK_CART_REALTIME_IMPLEMENTATION.md  MIGRATION_COMPLETE_SUMMARY.md  OKIOSK.md  README.md  README_VOICE_ASSISTANT.md  clean_sql.py  docker-compose.yml  instruction.md  pubspec.yaml  schema.md  supabase_functions.md  supabase_functions_clean.sql  wget
kks_online_backend/: .env.example  .gitignore  AUTH_QUICKSTART.md  COLUMN_NAMES.md  Cargo.toml  Dockerfile  QUICK_FIX.md  README.md  WINDOWS_DNS_FIX.md  build_log.txt  fix_windows_dns.ps1  run_output.txt  run_output_2.txt  run_output_3.txt  run_output_direct.txt  run_output_session.txt
kks_online_backend/.cursor/rules/: specifications.mdc
kks_online_backend/docs/: AI_MODULE.md  API_MIGRATION_GUIDE.md  CART_AI_MODULE.md  CART_MODULE.md  CATEGORY_MODULE.md  CHECKOUT_IMPLEMENTATION_SUMMARY.md  CHECKOUT_MODULE.md  FRONTEND_MULTI_VARIANT_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  QUEUE_BASED_AI_IMPLEMENTATION.md  QUICK_START.md  SEQUENTIAL_QUEUE_ARCHITECTURE.md  SETUP_INSTRUCTIONS.md  SINGLE_VARIANT_FIX_SUMMARY.md  database_migrations_checkout.sql
kks_online_backend/migrations/: auth_tables.sql
kks_online_backend/src/: main.rs
kks_online_backend/src/config/: mod.rs
kks_online_backend/src/database/: mod.rs  (+5 more)
(+299 files in other folders)
