[package]
name = "kks_online_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (Supabase uses PostgreSQL)
# rustls: pure-Rust TLS, no system OpenSSL dependency — required for Render (Linux)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
rust_decimal = { version = "1.33", features = ["serde"] }
sha2 = "0.10"

# HTTP client for Gemini API
# rustls: pure-Rust TLS, no system OpenSSL dependency — required for Render (Linux)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async traits
async-trait = "0.1"

# Google OAuth and JWT
oauth2 = "4.4"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# WebSocket support
socketioxide = "0.14"

# Multipart form handling for audio uploads
axum-extra = { version = "0.9", features = ["multipart"] }
tempfile = "3.10"

